[gd_scene load_steps=3 format=3 uid="uid://b0jnvr4ow0aot"]

[ext_resource type="Script" uid="uid://bk4ciae0l8cm4" path="res://UI/ui_scripts/explosion_menu.gd" id="1_7e7ds"]
[ext_resource type="Theme" uid="uid://dpvcn618erk1d" path="res://UI/ui_themes/OtherButtonTheme.tres" id="2_qa66e"]

[node name="ExplosionMenu" type="Node2D"]
script = ExtResource("1_7e7ds")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
clip_contents = false
layout_mode = 0
offset_left = 458.0
offset_top = 92.0
offset_right = 1508.0
offset_bottom = 278.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 70
text = "You Exploded The Kitchen.
Do Better."
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="ExplosionText" type="RichTextLabel" parent="CanvasLayer/Control"]
clip_contents = false
layout_mode = 0
offset_left = 270.0
offset_top = 341.0
offset_right = 1675.0
offset_bottom = 575.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "You exploded!"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
offset_left = 493.0
offset_top = 614.0
offset_right = 663.0
offset_bottom = 674.0
theme = ExtResource("2_qa66e")
text = "Main Menu"

[node name="Quit" type="Button" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
offset_left = 1318.0
offset_top = 623.0
offset_right = 1400.0
offset_bottom = 683.0
theme = ExtResource("2_qa66e")
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Control/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Quit" to="." method="_on_quit_pressed"]
